# pokemon-custom-evolution

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindPNG.cmake
dependencies/mingw/include/glm/detail/: type_half.inl
dependencies/mingw/include/glm/gtx/: color_space.inl  projection.inl
dependencies/mingw/lib/lpng1621/: CHANGES  CMakeCache.txt  README  TODO  libpng-manual.txt  libpng.3  png.5
dependencies/mingw/lib/lpng1621/cmake/: FindZLIB.cmake
dependencies/mingw/lib/lpng1621/contrib/gregbook/: README
dependencies/mingw/lib/lpng1621/contrib/pngminus/: png2pnm.bat  png2pnm.sh  pnm2png.bat  pnm2png.sh
src/: evolution.cpp
src/constants/: Constants.hpp
src/engine/: InputManager.cpp  InputManager.hpp  Manipulations.cpp  Manipulations.hpp  Transformations.cpp  Transformations.hpp
src/engine/animation/: Animation.cpp  Animation.hpp
src/engine/animation/animations/: Animation.cpp  Animation.hpp  BattleAnimation.cpp  BattleAnimation.hpp  EvolutionAnimation.cpp  EvolutionAnimation.hpp  ParticleAnimation.cpp  ParticleAnimation.hpp  TextAnimation.cpp  TextAnimation.hpp
src/engine/animation/keyframes/: BattleKeyFrame.cpp  BattleKeyFrame.hpp  EvolutionKeyFrame.cpp  EvolutionKeyFrame.hpp  KeyFrame.cpp  KeyFrame.hpp  ParticleKeyFrame.cpp  ParticleKeyFrame.hpp  TextKeyFrame.cpp  TextKeyFrame.hpp
src/engine/loaders/: Loader.cpp  Loader.hpp
src/engine/rendering/: RenderManager.cpp  RenderManager.hpp  StaticRenderer.cpp  StaticRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/engine/text/: Font.cpp  Font.hpp  Text.cpp  Text.hpp
src/images/: BitMap.cpp  BitMap.hpp  Image.cpp  Image.hpp  PngImage.cpp  PngImage.hpp
src/loaders/: ImageLoader.cpp  ImageLoader.hpp  Loader.cpp  Loader.hpp
src/objects/: AnimatedQuad.cpp  AnimatedQuad.hpp  BattleQuad.cpp  BattleQuad.hpp  EvolutionParticle.cpp  EvolutionParticle.hpp  EvolutionParticleGenerator.cpp  EvolutionParticleGenerator.hpp  EvolutionQuad.cpp  EvolutionQuad.hpp  Quad.cpp  Quad.hpp  RawModel.cpp  RawModel.hpp
src/scenes/: BattleScene.cpp  BattleScene.hpp  EvolutionScene.cpp  EvolutionScene.hpp  Scene.cpp  Scene.hpp
src/shaders/: Shader.h  ShaderProgram.cpp  ShaderProgram.hpp  StaticShader.cpp  StaticShader.hpp  TextShader.cpp  TextShader.hpp  frag_texture.glsl  vert_texture.glsl
src/windows/: Window.cpp  Window.hpp
